# imageMCP

./: .gitignore  PLAN.md  README.md  pyproject.toml  server.py
.github/workflows/: test.yml
src/imagemcp/tools/: advanced_ai.py  ai_cleanup.py  ai_generation.py  ai_segmentation.py  conversions.py  core_editing.py  design_analysis.py  layers.py  screenshot_to_code.py  smart_export.py
src/imagemcp/utils/: ai_client.py  canvas.py  io.py
tests/: conftest.py  download_assets.py  test_advanced_ai.py  test_ai_cleanup.py  test_ai_generation.py  test_ai_segmentation.py  test_conversions.py  test_core_editing.py  test_design_analysis.py  test_layers.py  test_screenshot_to_code.py  test_smart_export.py
