[project]
name = "imagemcp"
version = "0.1.0"
description = "Full-featured image processing MCP server: editing, layers, conversions, AI segmentation/cleanup/generation, design analysis, screenshot-to-code, and smart export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pillow>=11.0",
    "rembg[cpu]>=2.0",
    "anthropic>=0.50",
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "reportlab>=4.0",
    "cairosvg>=2.7",
    "pytesseract>=0.3",
    "numpy>=2.0",
]

[project.scripts]
imagemcp = "server:mcp.run"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-xdist>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
